# uncaged

./: BRANDING.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DIRECTION.md  DOWNLOADS.md  FAQ.md  FORKING.md  MODIFYING.md  NOTICE  README.md  RELEASING.md  SECURITY.md  UNCAGED.md  flake.nix
.github/workflows/: README-uncaged.md  arm64-linux-test.yml  uncaged-ci.yml  uncaged-release.yml  uncaged-review.yml
app/: Cargo.toml
app/channels/oss/: dev.uncaged.WarpOss.desktop
app/resources/tab_configs/: default_worktree.toml  new_tab_config_template.toml
app/src/: app_menus.rs  app_state.rs  appearance.rs  brand.rs  font_fallback.rs  gist_sync.rs  lib.rs  root_view.rs  settings_backup.rs  tab.rs  uncaged.rs  wasm_nux_dialog.rs
app/src/ai/: agent_conversations_model_tests.rs  (+8 more)
crates/uncaged_engine/: Cargo.toml  README.md
crates/uncaged_engine/src/: catalog.rs  config.rs  connections.rs  connections_tests.rs  engine.rs  lib.rs  live_tests.rs  model.rs  proto.rs  request_parse.rs  system_prompt.rs  tests.rs  tools.rs  wire.rs
crates/uncaged_engine/src/providers/: acp.rs  anthropic.rs  mod.rs  openai.rs  sse.rs
crates/warp_core/: build.rs
crates/warp_multi_agent_client/: Cargo.toml
docs/: migrate-from-warp.md  syncing-with-warp.md
packaging/homebrew/: uncaged.rb
packaging/winget/: Uncaged.Uncaged.installer.yaml  Uncaged.Uncaged.locale.en-US.yaml  Uncaged.Uncaged.yaml
script/: sync-upstream.sh  uncaged-backup  uncaged-setup
script/linux/: bundle  bundle_deb  bundle_rpm
script/macos/: bundle  run
script/windows/: bundle.ps1  windows-installer.iss
(+249 files in other folders)
