# Uncaged Engine
#
# A local, bring-your-own-model agent harness that replaces Warp's proprietary
# server-side inference (`/ai/multi-agent`) so the native Agent Mode UI can be
# powered by the user's own backend: a hosted API (Anthropic / OpenAI), any
# OpenAI-compatible local server (Ollama, LM Studio, llama.cpp, vLLM), or a CLI
# agent the user already pays for (via the Agent Client Protocol).
#
# Part of the Uncaged fork of the open-source Warp client. AGPL-3.0-only,
# same as the rest of the application crates.
[package]
name = "uncaged_engine"
version = "0.1.0"
edition = "2024"
authors.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
futures.workspace = true
prost-types.workspace = true
reqwest.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true, features = ["process", "io-util", "rt", "macros", "sync", "time"] }
tracing.workspace = true
uuid.workspace = true
warp_multi_agent_api.workspace = true
